updated for nightmare mode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,81 @@
     <title>BULLY VS NERD</title>
   </head>
   <body>
+    <div id="bully">
+      <div id=" Q1">
+        <label>You have been given the opportunity to live the life of a bully or a nerd. Choose to be bully or nerd.</label>
+        <br>
+        <input type="text" id="question1" placeholder="bully or nerd">
+        <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q2">
+          <label>Do you want to take the nerds lunch money or give him a wedgie ?</label>
+          <br>
+          <input type="text" id="question2" placeholder="lunch money or wedgie">
+          <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q2a-answer">
+          <p>You now have arcade money for later. Rich Mode Achieved! +100XP</p>
+          <br>
+          <p id=score></p>
+      </div>
+      <div id="Q2b-answer">
+          <label>You have made the nerd cry. Will you run or will you stay and change your ways after this dramatic event?</label>
+          <br>
+          <input type="text" id="question2b" placeholder="run or stay">
+          <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q3">
+        <label>Teacher has seen you! Where will you hide?"</label>
+        <br>
+        <input type="text" id="question3" placeholder="bathroom or playground">
+        <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q3a-answer">
+          <p>You have ran into Mr.AlwaysGivingYouCrap. Busted.</p>
+          <br>
+          <p id=score2></p>
+      </div>
+      <div id="Q3b-answer">
+          <p>You have blended in with the other kids and have successfully escaped. GTA mode Achieved. +200XP</p>
+          <br>
+          <p id=score3></p>
+      </div>
+      <div id="Q2b1-answer">
+          <p>What a chicken. You have unlocked a new transformation: New Bully Victim</p>
+          <br>
+          <p id=score4></p>
+      </div>
+    </div>
+    <div id="nerd">
+      <div id="Q2n">
+          <label>The bully has just demanded your lunch money. Will you give it to him or will you finally stand up to him?</label>
+          <br>
+          <input type="text" id="question2n" placeholder="give it or stand up">
+          <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q2na">
+          <p>You now have no money to eat. Poor Mode Achieved. -100XP</p>
+          <br>
+          <p id=score5></p>
+      </div>
+      <div id="Q2nb">
+          <label>This is what you have been waiting for, all your years of karate have prepared you for this! Will you punch him in the face or will you go low?</label>
+          <br>
+          <input type="text" id="question2nb" placeholder="face or low">
+          <button onclick="submitInfo()">Submit</button>
+      </div>
+      <div id="Q2nb-answer1">
+          <p>The bully has stopped your attack. Wasted.. You have unlocked an: Ass Whooping -1000XP</p>
+          <br>
+          <p id=score6></p>
+      </div>
+      <div id="Q2nb-answer2">
+          <p>You have conquered the giant! GANGSTER mode achieved. +500XP</p>
+          <br>
+          <p id=score7></p>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
